fix: prevent title from overlapping icon in navbar (BDS-464)

--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -166,6 +166,10 @@ bolt-navbar {
 
 .c-bolt-navbar__title-icon {
   @include bolt-margin(0 xsmall 0 0);
+
+  // Fix cross-browser bug where icon shrinks below its minimum natural width - see https://github.com/philipwalton/flexbugs#flexbug-1
+  flex-shrink: 0;
+  flex-basis: auto;
 }
 
 .c-bolt-navbar__title-text {
